--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.3rem;
+  line-height: 1;
+}
 
 /*# sourceMappingURL=style.css.map */
